--- a/Application/Admin/View/Mail/mail_detail.html
+++ b/Application/Admin/View/Mail/mail_detail.html
@@ -9,14 +9,14 @@
                             <h5>文件夹</h5>
                             <ul class="folder-list m-b-md" style="padding: 0">
                                 <li>
-                                    <a href="__CONTROLLER__/mailbox/type/got"> <i class="fa fa-inbox "></i> 收件箱 <span class="label label-warning pull-right">16</span>
+                                    <a href="__CONTROLLER__/index/type/got"> <i class="fa fa-inbox"></i> 收件箱 <span class="label label-warning pull-right">16</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="__CONTROLLER__/mailbox/type/sent"> <i class="fa fa-envelope-o"></i> 发件箱</a>
+                                    <a href="__CONTROLLER__/index/type/sent"> <i class="fa fa-envelope-o"></i> 发件箱</a>
                                 </li>
                                 <li>
-                                    <a href="__CONTROLLER__/mailbox/type/threw"> <i class="fa fa-trash-o"></i> 垃圾箱</a>
+                                    <a href="__CONTROLLER__/index/type/threw"> <i class="fa fa-trash-o"></i> 垃圾箱</a>
                                 </li>
                             </ul>
                             <a class="btn btn-block btn-primary compose-mail" href="{:U('mail_compose')}">写信</a>
@@ -25,82 +25,63 @@
                 </div>
             </div>
             <div class="col-sm-9 animated fadeInRight">
-                <div class="mail-box-header">
-                    <h2>查看邮件</h2>
-                    <div class="mail-tools tooltip-demo m-t-md">
-                        <h3><span class="font-noraml">主题： </span>幼儿园亲子班（园中园）项目方案</h3>
-                        <h5><span class="pull-right font-noraml">2014年10月28日(星期二) 晚上8:20</span><span class="font-noraml">发件人： </span>i@zi-han.net</h5>
-                    </div>
-                </div>
-                <div class="mail-box">
-                    <div class="mail-body">
-                        <h4>尊敬的幼儿园园长朋友：</h4>
-                        <p>
-                            贝贝聪教育，因您而精彩！由于婴幼教育一体化更符合婴幼儿成长需求，是全球早教专家、心理学家普遍推崇的一种办园模式。在美国、日本、英国、意大利、新加坡等国家及我国香港、台湾等地区，幼儿园普遍开设了亲子班，美国幼儿园开亲子班的比率为87%，意大利比率为83%。香港、台湾地区分别为74%、76%。2003年3月4日，国务院办公厅转发了教育部等10部门（单位）《关于幼儿教育改革与发展的指导意见》，强调发展0－6岁婴幼儿教育。在《幼儿园教育指导纲要（试行）》中已明确指出幼儿园教育要与0-3岁教育做好衔接。北京、上海等地要求在2013年，65%的公立一级幼儿园开设亲子班或园中园。
-                        </p>
-
-                        <p class="text-right">
-                            贝贝聪教育科技发展有限公司
-                        </p>
-                    </div>
-                    <div class="mail-attachment">
-                        <p>
-                            <span><i class="fa fa-paperclip"></i> 2 个附件 - </span>
-                            <a href="mail_detail.html#">下载全部</a> |
-                            <a href="mail_detail.html#">预览全部图片</a>
-                        </p>
-
-                        <div class="attachment">
-                            <div class="file-box">
-                                <div class="file">
-                                    <a href="mail_detail.html#">
-                                        <span class="corner"></span>
-
-                                        <div class="icon">
-                                            <i class="fa fa-file"></i>
-                                        </div>
-                                        <div class="file-name">
-                                            Document_2014.doc
-                                        </div>
-                                    </a>
-                                </div>
-
+                <switch name="type">
+                    <case value="1">
+                        <div class="mail-box-header">
+                            <h2>顾客简讯</h2>
+                            <div class="mail-tools tooltip-demo m-t-md">
+                                <h3><span class="font-noraml">主题： </span>{$massage.c_title}</h3>
+                                <h5><span class="pull-right font-noraml">{$massage.send_date|date="Y-m-d H:i:s", ###}</span>
+                                    <span class="font-noraml">发件人： </span>{$massage.c_name}&emsp;&emsp;
+                                    Email：{$massage.c_email|default="暂无"}&emsp;&emsp;IP：{$massage.c_ip}</h5>
                             </div>
-                            <div class="file-box">
-                                <div class="file">
-                                    <a href="mail_detail.html#">
-                                        <span class="corner"></span>
-
-                                        <div class="image">
-                                            <img alt="image" class="img-responsive" src="__PUBLIC__/Admin/img/p1.jpg">
-                                        </div>
-                                        <div class="file-name">
-                                            Italy street.jpg
-                                        </div>
-                                    </a>
-
-                                </div>
-                            </div>
-                            <div class="file-box">
-                                <div class="file">
-                                    <a href="mail_detail.html#">
-                                        <span class="corner"></span>
-
-                                        <div class="image">
-                                            <img alt="image" class="img-responsive" src="__PUBLIC__/Admin/img/p2.jpg">
-                                        </div>
-                                        <div class="file-name">
-                                            My feel.png
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
                         </div>
-                    </div>
+                        <div class="mail-box">
+                            <div class="mail-body">
+                                {$massage.c_content}
+                            </div>
+                    </case>
+                    <case value="2">
+                        <div class="mail-box-header">
+                            <h2>查看邮件</h2>
+                            <div class="mail-tools tooltip-demo m-t-md">
+                                <h3><span class="font-noraml">主题： </span>{$massage.c_title}</h3>
+                                <h5><span class="pull-right font-noraml">{$massage.send_date|date="Y-m-d H:i:s", ###}</span><span class="font-noraml">发件人： </span>{$massage.name}</h5>
+                            </div>
+                        </div>
+                        <div class="mail-box">
+                            <div class="mail-body">
+                                {$massage.c_content}
+                            </div>
+                            <if condition="$massage['hasfile'] eq 1 ">
+                            <div class="mail-attachment">
+                                <p>
+                                    <span><i class="fa fa-paperclip"></i> -- 共 {$count} 个附件 --</span><br>
+                                    <p>&emsp;点击可下载附件</p>
+                                </p>
+                                <div class="attachment">
+                                    <volist name="file" id="vo">
+                                        <div class="file-box">
+                                            <div class="file">
+                                                <a href="__CONTROLLER__/downLoad/id/{$vo.id}">
+                                                    <span class="corner"></span>
+                                                    <div class="image" style="width: 200px;height: 200px;">
+                                                        <img alt="image" class="img-responsive" style="width: 200px;height: 200px;" src="{$vo.file_path}">
+                                                    </div>
+                                                    <div class="file-name">{$vo.file_name}</div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </volist>
+                                    <div class="clearfix"></div>
+                                </div>
+                            </div>
+                            </if>
+                    </case>
+                </switch>
                     <div class="mail-body text-right tooltip-demo">
                         <a class="btn btn-sm btn-white" href="mail_compose.html"><i class="fa fa-reply"></i> 回复</a>
-                        <button title="" data-placement="top" data-toggle="tooltip" data-original-title="删除邮件" class="btn btn-sm btn-white"><i class="fa fa-trash-o"></i> 删除</button>
+                        <button title="" data-placement="top" data-toggle="tooltip" data-original-title="删除邮件" class="btn btn-sm btn-white" onclick="del('{$massage.id}')"><i class="fa fa-trash-o"></i> 删除</button>
                     </div>
                     <div class="clearfix"></div>
                 </div>
@@ -108,7 +89,22 @@
         </div>
     </div>
     <include file="Public/js"/>
+    <switch name="Think.session.theMail">
+        <case value="1">
+            <script>var url = '__CONTROLLER__/DelOne/id/';</script>
+        </case>
+        <case value="2">
+            <script>var url = '__CONTROLLER__/myDelOne/id/';</script>
+        </case>
+        <case value="3">
+            <script>var url = '__CONTROLLER__/realDelOne/id/';</script>
+        </case>
+
+    </switch>
     <script>
+        function del(id) {
+            location.href = url + id;
+        }
         $(document).ready(function(){$(".i-checks").iCheck({checkboxClass:"icheckbox_square-green",radioClass:"iradio_square-green"})});
     </script>
 </body>
