--- a/Application/Admin/View/Edit/avatar.html
+++ b/Application/Admin/View/Edit/avatar.html
@@ -39,7 +39,7 @@
         console.log($('#file').val());
         /!*$('#avatar').attr('src', $('#file').val());*!/
     });*/
-    $(document).ready(function(){$(".summernote").summernote({lang:"zh-CN"})});var edit=function(){$("#eg").addClass("no-padding");$(".click2edit").summernote({lang:"zh-CN",focus:true})};var save=function(){$("#eg").removeClass("no-padding");var aHTML=$(".click2edit").code();$(".click2edit").destroy()};
+    //$(document).ready(function(){$(".summernote").summernote({lang:"zh-CN"})});var edit=function(){$("#eg").addClass("no-padding");$(".click2edit").summernote({lang:"zh-CN",focus:true})};var save=function(){$("#eg").removeClass("no-padding");var aHTML=$(".click2edit").code();$(".click2edit").destroy()};
 </script>
 </body>
 </html>
