joker add product&modify mb_sunstr

--- a/Application/Admin/View/Core/index.html
+++ b/Application/Admin/View/Core/index.html
@@ -49,6 +49,7 @@
                         <ul class="nav nav-second-level">
                             <li><a class="J_menuItem" href="{:U('Wedding/index')}">婚礼管理</a></li>
                             <li><a class="J_menuItem" href="{:U('User/index')}">职员管理</a></li>
+                            <li><a class="J_menuItem" href="{:U('Product/index')}">商品管理</a></li>
                         </ul>
                     </li>
 
