--- a/Application/Admin/View/Ourhistory/index.html
+++ b/Application/Admin/View/Ourhistory/index.html
@@ -33,7 +33,7 @@
                                 <tr>
                                     <td>{$vo.id}</td>
                                     <td>{$vo.time|date='Y-m-d H:i:s', ###}</td>
-                                    <td>{$vo.history|mb_substr=0,20}</td>
+                                    <td>{$vo.history|msubstr=0,20}</td>
                                     <td>
                                         <span title="记录信息" class="look" data="{$vo.id}" which="history"><i class="glyphicon glyphicon-search"></i></span>
                                         &emsp;
