--- a/Application/Home/View/WeddingStore/header.html
+++ b/Application/Home/View/WeddingStore/header.html
@@ -28,18 +28,18 @@
         <div class="header_top-sec">
             <div class="top_right">
                 <ul>
-                    <li><a href="#">help</a></li>|
-                    <li><a href="contact.html">Contact</a></li>|
-                    <li><a href="login.html">Track Order</a></li>
+                    <li><a href="#">帮助</a></li>|
+                    <li><a href="contact.html">联系方式</a></li>|
+                    <li><a href="login.html">订单跟踪</a></li>
                 </ul>
             </div>
             <div class="top_left">
                 <ul>
-                    <li class="top_link">Email:<a href="mailto:info@example.com">mail@example.com</a></li>|
-                    <li class="top_link"><a href="login.html">My Account</a></li>
+                    <li class="top_link">Email:<a href="mailto:info@example.com">joker@vip.com</a></li>|
+                    <li class="top_link"><a href="login.html">我的账单</a></li>
                 </ul>
             </div>
-            <div class="clearfix"> </div>
+            <div class="clearfix">     </div>
         </div>
     </div>
 </div>
@@ -47,101 +47,91 @@
     <div class="header-bottom">
         <div class="container">
             <div class="logo">
-                <a href="index.html"><h1>Wedding Store</h1></a>
+                <a href="index.html"><h1>婚礼商店</h1></a>
             </div>
             <div class="top-nav">
                 <ul class="memenu skyblue">
-                    <li class="grid"><a href="index.html">Home</a></li>
-                    <li class="grid"><a href="#">Wedding</a>
+                    <li class="grid"><a href="{:U('Index/index')}">主页</a></li>
+                    <li class="grid"><a href="#">婚礼</a>
                         <div class="mepanel">
                             <div class="row">
                                 <div class="col1 me-one">
-                                    <h4>Shop</h4>
+                                    <h4>商店</h4>
                                     <ul>
-                                        <li><a href="product.html">New Arrivals</a></li>
-                                        <li><a href="product.html">Men</a></li>
-                                        <li><a href="product.html">Women</a></li>
-                                        <li><a href="product.html">Accessories</a></li>
-                                        <li><a href="product.html">Kids</a></li>
-                                        <li><a href="product.html">login</a></li>
-                                        <li><a href="product.html">Brands</a></li>
-                                        <li><a href="product.html">My Shopping Bag</a></li>
+                                        <li><a href="product.html">新鲜上架</a></li>
+                                        <li><a href="product.html">男士</a></li>
+                                        <li><a href="product.html">女士</a></li>
+                                        <li><a href="product.html">配饰</a></li>
+                                        <li><a href="product.html">儿童</a></li>
+                                        <li><a href="product.html">我的购物车</a></li>
                                     </ul>
                                 </div>
                                 <div class="col1 me-one">
-                                    <h4>Style Zone</h4>
+                                    <h4>风格特区</h4>
                                     <ul>
-                                        <li><a href="product.html">Men</a></li>
-                                        <li><a href="product.html">Women</a></li>
-                                        <li><a href="product.html">Brands</a></li>
-                                        <li><a href="product.html">Kids</a></li>
-                                        <li><a href="product.html">Accessories</a></li>
-                                        <li><a href="product.html">Style Videos</a></li>
+                                       <li><a href="product.html">男士</a></li>
+                                        <li><a href="product.html">女士</a></li>
+                                        <li><a href="product.html">配饰</a></li>
+                                        <li><a href="product.html">儿童</a></li>
+                                        <li><a href="product.html">伴奏风格</a></li>
                                     </ul>
                                 </div>
                                 <div class="col1 me-one">
-                                    <h4>Popular Brands</h4>
+                                    <h4>流行元素</h4>
                                     <ul>
-                                        <li><a href="product.html">Levis</a></li>
-                                        <li><a href="product.html">Persol</a></li>
-                                        <li><a href="product.html">Nike</a></li>
-                                        <li><a href="product.html">Edwin</a></li>
-                                        <li><a href="product.html">New Balance</a></li>
-                                        <li><a href="product.html">Jack & Jones</a></li>
-                                        <li><a href="product.html">Paul Smith</a></li>
-                                        <li><a href="product.html">Ray-Ban</a></li>
-                                        <li><a href="product.html">Wood Wood</a></li>
+                                        <li><a href="product.html">李维斯/Levis</a></li>
+                                        <li><a href="product.html">普索/Persol</a></li>
+                                        <li><a href="product.html">耐克/Nike</a></li>
+                                        <li><a href="product.html">爱德华/Edwin</a></li>
+                                        <li><a href="product.html">新百伦/New Balance</a></li>
+                                        <li><a href="product.html">杰克琼斯/Jack & Jones</a></li>
+                                        <li><a href="product.html">保罗·斯密斯/Paul Smith</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                     </li>
-                    <li class="grid"><a href="#">Bride Style</a>
+                    <li class="grid"><a href="#">新人造型</a>
                         <div class="mepanel">
                             <div class="row">
                                 <div class="col1 me-one">
-                                    <h4>Shop</h4>
+                                    <h4>商店</h4>
                                     <ul>
-                                        <li><a href="product.html">New Arrivals</a></li>
-                                        <li><a href="product.html">Men</a></li>
-                                        <li><a href="product.html">Women</a></li>
-                                        <li><a href="product.html">Accessories</a></li>
-                                        <li><a href="product.html">Kids</a></li>
-                                        <li><a href="product.html">login</a></li>
-                                        <li><a href="product.html">Brands</a></li>
-                                        <li><a href="product.html">My Shopping Bag</a></li>
+                                        <li><a href="product.html">新鲜上架</a></li>
+                                        <li><a href="product.html">男士</a></li>
+                                        <li><a href="product.html">女士</a></li>
+                                        <li><a href="product.html">配饰</a></li>
+                                        <li><a href="product.html">儿童</a></li>
+                                        <li><a href="product.html">我的购物车</a></li>
                                     </ul>
                                 </div>
                                 <div class="col1 me-one">
-                                    <h4>Style Zone</h4>
+                                   <h4>风格特区</h4>
                                     <ul>
-                                        <li><a href="product.html">Men</a></li>
-                                        <li><a href="product.html">Women</a></li>
-                                        <li><a href="product.html">Brands</a></li>
-                                        <li><a href="product.html">Kids</a></li>
-                                        <li><a href="product.html">Accessories</a></li>
-                                        <li><a href="product.html">Style Videos</a></li>
+                                       <li><a href="product.html">男士</a></li>
+                                        <li><a href="product.html">女士</a></li>
+                                        <li><a href="product.html">配饰</a></li>
+                                        <li><a href="product.html">儿童</a></li>
+                                        <li><a href="product.html">伴奏风格</a></li>
                                     </ul>
                                 </div>
                                 <div class="col1 me-one">
-                                    <h4>Popular Brands</h4>
+                                     <h4>流行元素</h4>
                                     <ul>
-                                        <li><a href="product.html">Levis</a></li>
-                                        <li><a href="product.html">Persol</a></li>
-                                        <li><a href="product.html">Nike</a></li>
-                                        <li><a href="product.html">Edwin</a></li>
-                                        <li><a href="product.html">New Balance</a></li>
-                                        <li><a href="product.html">Jack & Jones</a></li>
-                                        <li><a href="product.html">Paul Smith</a></li>
-                                        <li><a href="product.html">Ray-Ban</a></li>
-                                        <li><a href="product.html">Wood Wood</a></li>
+                                        <li><a href="product.html">李维斯/Levis</a></li>
+                                        <li><a href="product.html">普索/Persol</a></li>
+                                        <li><a href="product.html">耐克/Nike</a></li>
+                                        <li><a href="product.html">爱德华/Edwin</a></li>
+                                        <li><a href="product.html">新百伦/New Balance</a></li>
+                                        <li><a href="product.html">杰克琼斯/Jack & Jones</a></li>
+                                        <li><a href="product.html">保罗·斯密斯/Paul Smith</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                     </li>
-                    <li class="grid"><a href="typo.html">Typo</a></li>
-                    <li class="grid"><a href="contact.html">Contact</a></li>
+                    <li class="grid"><a href="typo.html">打印订单</a></li>
+                    <li class="grid"><a href="contact.html">联系我们</a></li>
                 </ul>
                 <div class="clearfix"> </div>
             </div>
