--- a/Application/Admin/View/Wedding/index.html
+++ b/Application/Admin/View/Wedding/index.html
@@ -35,11 +35,11 @@
                                 <td>{$vol.id}</td>
                                 <td>{$vol.bride}</td>
                                 <td>{$vol.bridegroom}</td>
-                                <td>{$vol.bride_info|mb_substr=0,10}</td>
-                                <td>{$vol.bridegroom_info|mb_substr=0,10}</td>
+                                <td>{$vol.bride_info|msubstr=0,5}</td>
+                                <td>{$vol.bridegroom_info|msubstr=0,5}</td>
                                 <td>{$vol.address_name}</td>
                                 <td>{$vol.wedding_date|date='Y-m-d H:i:s', ###}</td>
-                                <td>{$vol.info|mb_substr=0,20}</td>
+                                <td>{$vol.info|msubstr=0,5}</td>
                                 <td>{$vol.status_name}</td>
                                 <td><if condition="$vol['top'] == 0 ">否<else/>是</if></td>
                                 <td>
